Use snapshots library with tests to simplify testcases

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
 		"henrikbjorn/lurker": "^1.1.0",
 		"symfony/var-dumper": "^3.2",
 		"squizlabs/php_codesniffer": "^3.0.0@beta",
-		"phpstan/phpstan": "^0.6.4"
+		"phpstan/phpstan": "^0.6.4",
+		"spatie/phpunit-snapshot-assertions": "^0.4.1"
 	},
 	"scripts": {
 		"build": "vendor/bin/robo build",
