--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ composer.lock
 *.sqlite
 *.db
 *.sqlite3
-apidocs/*
+apidocs/**
 tests/test_data/sessions/*
 cache.properties
 build/**
@@ -27,5 +27,6 @@ phinx.yml
 Caddyfile
 build/humbuglog.txt
 public/images/anime/**
+public/images/avatars/**
 public/images/manga/**
 public/images/characters/**
