Attempt to fix builds

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ test:7:
       - apk add --no-cache php7-phpdbg
       - curl -sS https://getcomposer.org/installer | php
       - php composer.phar install --ignore-platform-reqs
-    image: php:7-alpine
+    image: php:7.0-cli-alpine
     script:
       - phpdbg -qrr -- ./vendor/bin/phpunit --coverage-text --colors=never
 
@@ -16,6 +16,6 @@ test:7.1:
       - apk add --no-cache php7-phpdbg
       - curl -sS https://getcomposer.org/installer | php
       - php composer.phar install --ignore-platform-reqs
-    image: php:7.1-alpine
+    image: php:7.1-cli-alpine
     script:
       - phpdbg -qrr -- ./vendor/bin/phpunit --coverage-text --colors=never
