--- a/composer.json
+++ b/composer.json
@@ -1,58 +1,57 @@
 {
-	"name": "aviat/hummingbird-anime-client",
-	"description": "A self-hosted anime/manga client for Kitsu.",
-	"license":"MIT",
-	"autoload": {
-		"files": [
-			"src/AnimeClient.php"
-		],
-		"psr-4": {
-			"Aviat\\AnimeClient\\": "src/"
-		}
-	},
-	"autoload-dev": {
-		"psr-4": {
-			"Aviat\\AnimeClient\\Tests\\": "tests/",
-			"CodeIgniter\\": "build/CodeIgniter/"
-		}
-	},
-	"require": {
-		"aura/html": "^2.0",
-		"aura/router": "^3.0",
-		"aura/session": "^2.0",
-		"aviat/banker": "^1.0.0",
-		"aviat/ion": "^2.2.0",
-		"monolog/monolog": "^1.0",
-		"psr/http-message": "~1.0",
-		"psr/log": "~1.0",
-		"yosymfony/toml": "^1.0",
-		"zendframework/zend-diactoros": "^1.3",
-		"maximebf/consolekit": "^1.0",
-		"amphp/artax": "^2.0"
-	},
-	"require-dev": {
-		"pdepend/pdepend": "^2.2",
-		"sebastian/phpcpd": "^3.0",
-		"theseer/phpdox": "dev-master",
-		"phploc/phploc": "^4.0",
-		"phpmd/phpmd": "^2.4",
-		"phpunit/phpunit": "^6.0",
-		"robmorgan/phinx": "^0.9.1",
-		"consolidation/robo": "~1.0",
-		"henrikbjorn/lurker": "^1.1.0",
-		"symfony/var-dumper": "^4.0.1",
-		"squizlabs/php_codesniffer": "^3.0.0@beta",
-		"phpstan/phpstan": "^0.9.1",
-		"spatie/phpunit-snapshot-assertions": "^1.2.0"
-	},
-	"scripts": {
-		"build": "vendor/bin/robo build",
-		"build:css": "cd public && npm run build && cd ..",
-		"clean": "vendor/bin/robo clean",
-		"coverage": "phpdbg -qrr -- vendor/bin/phpunit -c build",
-		"docs": "vendor/bin/phpdox",
-		"phpstan": "phpstan analyse src tests",
-		"watch:css": "cd public && npm run watch",
-		"test": "vendor/bin/phpunit"
+  "name": "aviat/hummingbird-anime-client",
+  "description": "A self-hosted anime/manga client for Kitsu.",
+  "license": "MIT",
+  "autoload": {
+	"files": [
+	  "src/AnimeClient.php"
+	],
+	"psr-4": {
+	  "Aviat\\AnimeClient\\": "src/"
 	}
+  },
+  "autoload-dev": {
+	"psr-4": {
+	  "Aviat\\AnimeClient\\Tests\\": "tests/",
+	  "CodeIgniter\\": "build/CodeIgniter/"
+	}
+  },
+  "require": {
+	"amphp/artax": "^2.0",
+	"aura/html": "^2.0",
+	"aura/router": "^3.0",
+	"aura/session": "^2.0",
+	"aviat/banker": "^1.0.0",
+	"aviat/ion": "^2.2.0",
+	"maximebf/consolekit": "^1.0",
+	"monolog/monolog": "^1.0",
+	"psr/http-message": "~1.0",
+	"psr/log": "~1.0",
+	"yosymfony/toml": "^1.0",
+	"zendframework/zend-diactoros": "^1.3"
+  },
+  "require-dev": {
+	"consolidation/robo": "~1.0",
+	"henrikbjorn/lurker": "^1.1.0",
+	"pdepend/pdepend": "^2.2",
+	"phploc/phploc": "^4.0",
+	"phpmd/phpmd": "^2.4",
+	"phpstan/phpstan": "^0.9.1",
+	"phpunit/phpunit": "^6.0",
+	"robmorgan/phinx": "^0.9.1",
+	"sebastian/phpcpd": "^3.0",
+	"spatie/phpunit-snapshot-assertions": "^1.2.0",
+	"squizlabs/php_codesniffer": "^3.0.0@beta",
+	"theseer/phpdox": "^0.10.1"
+  },
+  "scripts": {
+	"build": "vendor/bin/robo build",
+	"build:css": "cd public && npm run build && cd ..",
+	"clean": "vendor/bin/robo clean",
+	"coverage": "phpdbg -qrr -- vendor/bin/phpunit -c build",
+	"docs": "vendor/bin/phpdox",
+	"phpstan": "phpstan analyse src tests",
+	"watch:css": "cd public && npm run watch",
+	"test": "vendor/bin/phpunit"
+  }
 }
