--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,9 @@
 	"robmorgan/phinx": "^0.9.1",
 	"sebastian/phpcpd": "^3.0",
 	"spatie/phpunit-snapshot-assertions": "^1.2.0",
-	"squizlabs/php_codesniffer": "^3.0.0@beta",
+	"squizlabs/php_codesniffer": "^3.2.2",
 	"symfony/var-dumper": "^4.0.1",
-	"theseer/phpdox": "^0.10.1",
+	"theseer/phpdox": "^0.11.0",
     "filp/whoops": "^2.1"
   },
   "scripts": {
