--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
 	"clean": "vendor/bin/robo clean",
 	"coverage": "phpdbg -qrr -- vendor/bin/phpunit -c build",
 	"docs": "vendor/bin/phpdox",
-	"phpstan": "phpstan analyse src tests",
+	"phpstan": "phpstan analyse -l 3 ./phpstan.neon src tests",
 	"watch:css": "cd public && npm run watch",
 	"test": "vendor/bin/phpunit"
   }
