--- a/public/package.json
+++ b/public/package.json
@@ -1,13 +1,21 @@
 {
 	"scripts": {
-		"build": "node ./css.js",
-		"watch": "watch 'npm run build' --filter=./cssfilter.js"
+		"build": "npm run build:css && npm run build:js",
+		"build:css": "node ./tools/css.js",
+		"build:js": "rollup -c ./tools/build-js.js",
+		"watch:css": "watch 'npm run build:css' --filter=./tools/cssfilter.js",
+		"watch:js": "watch 'npm run build:js' ./js/src",
+		"watch": "concurrently \"npm:watch:css\" \"npm:watch:js\" --kill-others"
 	},
 	"devDependencies": {
+		"concurrently": "^3.6.1",
 		"cssnano": "^4.0.5",
 		"postcss-cachify": "^1.3.1",
 		"postcss-cssnext": "^3.0.0",
 		"postcss-import": "^12.0.0",
+		"rollup": "^0.64.1",
+		"rollup-plugin-buble": "^0.19.2",
+		"rollup-plugin-closure-compiler-js": "^1.0.6",
 		"watch": "^1.0.2"
 	}
 }
