--- a/public/package.json
+++ b/public/package.json
@@ -8,14 +8,13 @@
 		"watch": "concurrently \"npm:watch:css\" \"npm:watch:js\" --kill-others"
 	},
 	"devDependencies": {
+		"@ampproject/rollup-plugin-closure-compiler": "^0.7.2",
 		"concurrently": "^3.6.1",
 		"cssnano": "^4.0.5",
 		"postcss-cachify": "^1.3.1",
 		"postcss-cssnext": "^3.0.0",
 		"postcss-import": "^12.0.0",
 		"rollup": "^0.64.1",
-		"rollup-plugin-buble": "^0.19.2",
-		"rollup-plugin-closure-compiler-js": "^1.0.6",
 		"watch": "^1.0.2"
 	}
 }
