--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
 	"aura/session": "^2.0",
 	"aviat/banker": "^1.0.0",
 	"aviat/ion": "^2.3.0",
+	"ext-gd":"*",
+	"ext-pdo": "*",
 	"maximebf/consolekit": "^1.0",
 	"monolog/monolog": "^1.0",
 	"psr/http-message": "~1.0",
