--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
 	"aura/session": "^2.0",
 	"aviat/banker": "^1.0.0",
 	"aviat/ion": "^2.3.0",
+	"ext-json": "*",
 	"ext-gd":"*",
 	"ext-pdo": "*",
 	"maximebf/consolekit": "^1.0",
