--- a/public/package.json
+++ b/public/package.json
@@ -1,4 +1,5 @@
 {
+	"license": "MIT",
 	"scripts": {
 		"build": "npm run build:css && npm run build:js",
 		"build:css": "node ./tools/css.js",
@@ -8,15 +9,13 @@
 		"watch": "concurrently \"npm:watch:css\" \"npm:watch:js\" --kill-others"
 	},
 	"devDependencies": {
-		"concurrently": "^3.6.1",
+		"concurrently": "^4.0.1",
 		"cssnano": "^4.0.5",
 		"postcss-cachify": "^1.3.1",
 		"postcss-cssnext": "^3.0.0",
 		"postcss-import": "^12.0.0",
-		"rollup": "^0.64.1",
+		"rollup": "^0.66.6",
+		"rollup-plugin-closure-compiler-js": "^1.0.6",
 		"watch": "^1.0.2"
-	},
-	"dependencies": {
-		"rollup-plugin-closure-compiler-js": "^1.0.6"
 	}
 }
