--- a/public/package.json
+++ b/public/package.json
@@ -9,6 +9,7 @@
 		"watch": "concurrently \"npm:watch:css\" \"npm:watch:js\" --kill-others"
 	},
 	"devDependencies": {
+		"@ampproject/rollup-plugin-closure-compiler": "^0.8.3",
 		"concurrently": "^4.0.1",
 		"cssnano": "^4.0.5",
 		"postcss-cachify": "^1.3.1",
