--- a/phinx.yml
+++ b/phinx.yml
@@ -1,9 +1,9 @@
 paths:
-    migrations: %%PHINX_CONFIG_DIR%%/migrations
+    migrations: '%%PHINX_CONFIG_DIR%%/migrations'
 
 environments:
     default_migration_table: phinxlog
     default_database: development
     development:
         adapter: sqlite
-        name: ./anime_collection.sqlite
+        name: ./anime_collection # Phinx will add a .sqlite3 suffix
