--- a/public/package.json
+++ b/public/package.json
@@ -10,13 +10,12 @@
 	},
 	"devDependencies": {
 		"@ampproject/rollup-plugin-closure-compiler": "^0.9.0",
-		"concurrently": "^4.0.1",
-		"cssnano": "^4.0.5",
-		"postcss-cachify": "^1.3.1",
-		"postcss-cssnext": "^3.0.0",
-		"postcss-import": "^12.0.0",
-		"rollup": "^1.11.3",
-		"rollup-plugin-closure-compiler-js": "^1.0.6",
+		"concurrently": "^4.1.1",
+		"cssnano": "^4.1.10",
+		"postcss": "^7.0.17",
+		"postcss-import": "^12.0.1",
+		"postcss-preset-env": "^6.7.0",
+		"rollup": "^1.16.7",
 		"watch": "^1.0.2"
 	}
 }
