--- a/composer.json
+++ b/composer.json
@@ -23,33 +23,33 @@
 	"aura/router": "^3.0",
 	"aura/session": "^2.0",
 	"aviat/banker": "^2.0.0",
-	"aviat/ion": "^2.4.1",
+	"aviat/ion": "^3.0.0",
 	"ext-iconv": "*",
 	"ext-json": "*",
 	"ext-gd":"*",
 	"ext-pdo": "*",
 	"maximebf/consolekit": "^1.0",
-	"monolog/monolog": "^1.0",
+	"monolog/monolog": "^2.0.1",
+	"php": "^7.2",
 	"psr/http-message": "~1.0",
 	"psr/log": "~1.0",
 	"yosymfony/toml": "^1.0",
 	"zendframework/zend-diactoros": "^2.0.0"
   },
   "require-dev": {
-	"consolidation/robo": "~1.0",
+	"consolidation/robo": "^2.0.0",
 	"filp/whoops": "^2.1",
-	"henrikbjorn/lurker": "^1.1.0",
 	"pdepend/pdepend": "^2.2",
-	"phploc/phploc": "^4.0",
+	"phploc/phploc": "^5.0",
 	"phpmd/phpmd": "^2.4",
-	"phpstan/phpstan": "^0.10.5",
-	"phpunit/phpunit": "^7.4.3",
+	"phpstan/phpstan": "^0.12.0",
+	"phpunit/phpunit": "^8.4.3",
 	"roave/security-advisories": "dev-master",
 	"robmorgan/phinx": "^0.10.6",
 	"sebastian/phpcpd": "^4.1.0",
-	"spatie/phpunit-snapshot-assertions": "^1.2.0",
+	"spatie/phpunit-snapshot-assertions": "^3.1.0",
 	"squizlabs/php_codesniffer": "^3.2.2",
-	"symfony/var-dumper": "^4.0.1",
+	"symfony/var-dumper": "^4.4.1",
     "theseer/phpdox": "*"
   },
   "scripts": {
