Add linting check to CI to help catch version-incompatible code

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ php:
 
 script:
   - mkdir -p build/logs
+  - vendor/bin/robo lint
   - phpdbg -qrr -- vendor/bin/phpunit -c build
 
 after_script:
