--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
 	"spatie/phpunit-snapshot-assertions": "^2.2.1",
 	"squizlabs/php_codesniffer": "^3.2.2",
 	"symfony/var-dumper": "^4.4.1",
-    "theseer/phpdox": "*"
+	"theseer/phpdox": "*",
+	"vimeo/psalm": "^3.7"
   },
   "scripts": {
 	"build": "vendor/bin/robo build",
@@ -58,10 +59,11 @@
 	"build:js": "cd public && npm run build:js && cd ..",
 	"clean": "vendor/bin/robo clean",
 	"coverage": "phpdbg -qrr -- vendor/bin/phpunit -c build",
-	"phpstan": "phpstan analyse -l 4 -c phpstan.neon src tests ./console index.php",
+	"phpstan": "phpstan analyse -c phpstan.neon",
 	"watch:css": "cd public && npm run watch:css",
 	"watch:js": "cd public && npm run watch:js",
-	"test": "vendor/bin/phpunit"
+	"test": "vendor/bin/phpunit -c build --no-coverage",
+	"test-update": "vendor/bin/phpunit -c build --no-coverage -d --update-snapshots"
   },
   "scripts-descriptions": {
 	"build": "Generate the api docs",
