--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 	}
   },
   "require": {
-	"amphp/artax": "^3.0",
+	"amphp/http-client": "^4.2",
 	"aura/html": "^2.0",
 	"aura/router": "^3.0",
 	"aura/session": "^2.0",
@@ -28,13 +28,13 @@
 	"ext-json": "*",
 	"ext-gd":"*",
 	"ext-pdo": "*",
+	"laminas/laminas-diactoros": "^2.0.0",
 	"maximebf/consolekit": "^1.0",
 	"monolog/monolog": "^2.0.1",
 	"php": "^7.3",
 	"psr/http-message": "~1.0",
 	"psr/log": "~1.0",
-	"yosymfony/toml": "^1.0",
-	"zendframework/zend-diactoros": "^2.0.0"
+	"yosymfony/toml": "^1.0"
   },
   "require-dev": {
 	"consolidation/robo": "^2.0.0",
