--- a/composer.json
+++ b/composer.json
@@ -50,8 +50,7 @@
 	"spatie/phpunit-snapshot-assertions": "^2.2.1",
 	"squizlabs/php_codesniffer": "^3.2.2",
 	"symfony/var-dumper": "^4.4.1",
-	"theseer/phpdox": "*",
-	"vimeo/psalm": "^3.7"
+	"theseer/phpdox": "*"
   },
   "scripts": {
 	"build": "vendor/bin/robo build",
