Another attempt to fix CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,15 @@ php:
 
 script:
   - mkdir -p build/logs
-  - phpdbg -qrr -- vendor/bin/phpunit -c build
+  - php vendor/bin/phpunit -c build
 
-after_script:
-    - CODECLIMATE_REPO_TOKEN=2cbddcebcb9256b3402867282e119dbe61de0b31039325356af3c7d72ed6d058 vendor/bin/test-reporter
+#after_script:
+#    - CODECLIMATE_REPO_TOKEN=2cbddcebcb9256b3402867282e119dbe61de0b31039325356af3c7d72ed6d058 vendor/bin/test-reporter
 
 matrix:
   allow_failures:
     - php: nightly
 
-addons:
-    code_climate:
-        repo_token: 2cbddcebcb9256b3402867282e119dbe61de0b31039325356af3c7d72ed6d058
+#addons:
+#    code_climate:
+#        repo_token: 2cbddcebcb9256b3402867282e119dbe61de0b31039325356af3c7d72ed6d058
