--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
 	"maximebf/consolekit": "^1.0",
 	"monolog/monolog": "^2.0.1",
 	"php": "^7.3",
+	"psr/container":"~1.0",
 	"psr/http-message": "~1.0",
 	"psr/log": "~1.0",
 	"yosymfony/toml": "^1.0"
@@ -64,7 +65,6 @@
 	"clean": "vendor/bin/robo clean",
 	"coverage": "phpdbg -qrr -- vendor/bin/phpunit -c build",
 	"phpstan": "phpstan analyse -c phpstan.neon",
-	"psalm": "vendor/bin/psalm",
 	"watch:css": "cd public && npm run watch:css",
 	"watch:js": "cd public && npm run watch:js",
 	"test": "vendor/bin/phpunit -c build --no-coverage",
