--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   "config": {
 	"lock": false,
 	"platform": {
-	  "php": "7.3"
+	  "php": "7.4"
 	}
   },
   "require": {
@@ -50,7 +50,7 @@
 	"laminas/laminas-httphandlerrunner": "^1.0",
 	"maximebf/consolekit": "^1.0",
 	"monolog/monolog": "^2.0.1",
-	"php": "^7.3",
+	"php": "^7.4 || ^8",
 	"psr/container": "~1.0",
 	"psr/http-message": "~1.0",
 	"psr/log": "~1.0",
@@ -60,14 +60,14 @@
 	"consolidation/robo": "^2.0.0",
 	"filp/whoops": "^2.1",
 	"pdepend/pdepend": "^2.2",
-	"phploc/phploc": "^5.0",
+	"phploc/phploc": "^6.0.2",
 	"phpmd/phpmd": "^2.8",
 	"phpstan/phpstan": "^0.12.0",
-	"phpunit/phpunit": "^8.4.3",
+	"phpunit/phpunit": "^9.1.1",
 	"roave/security-advisories": "dev-master",
 	"robmorgan/phinx": "^0.10.6",
-	"sebastian/phpcpd": "^4.1.0",
-	"spatie/phpunit-snapshot-assertions": "^2.2.1",
+	"sebastian/phpcpd": "^5.0.2",
+	"spatie/phpunit-snapshot-assertions": "^4.1.0",
 	"squizlabs/php_codesniffer": "^3.2.2",
 	"symfony/var-dumper": "^5",
 	"theseer/phpdox": "*"
