--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
 	"laminas/laminas-httphandlerrunner": "^1.0",
 	"maximebf/consolekit": "^1.0",
 	"monolog/monolog": "^2.0.1",
-	"php": "^7.4 || ^8",
+	"php": ">=7.4",
 	"psr/container": "~1.0",
 	"psr/http-message": "~1.0",
 	"psr/log": "~1.0",
