--- a/frontEndSrc/package.json
+++ b/frontEndSrc/package.json
@@ -5,11 +5,11 @@
 		"build:css": "node ./css.js",
 		"build:js": "rollup -c ./build-js.js",
 		"watch:css": "watch 'npm run build:css' --filter=./cssfilter.js",
-		"watch:js": "watch 'npm run build:js' ./js/src",
+		"watch:js": "watch 'npm run build:js' ./js",
 		"watch": "concurrently \"npm:watch:css\" \"npm:watch:js\" --kill-others"
 	},
 	"devDependencies": {
-		"@ampproject/rollup-plugin-closure-compiler": "^0.24.0",
+		"@ampproject/rollup-plugin-closure-compiler": "^0.25.2",
 		"concurrently": "^5.1.0",
 		"cssnano": "^4.1.10",
 		"postcss": "^7.0.27",
