Update dependency to published version

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
 	"aura/router": "^3.0",
 	"aura/session": "^2.0",
 	"aviat/banker": "^2.0.0",
-	"aviat/query": "dev-develop",
+	"aviat/query": "^3.0.0",
 	"danielstjules/stringy": "^3.1.0",
 	"ext-dom": "*",
 	"ext-iconv": "*",
@@ -65,7 +65,7 @@
 	"phpstan/phpstan": "^0.12.0",
 	"phpunit/phpunit": "^9.1.1",
 	"roave/security-advisories": "dev-master",
-	"robmorgan/phinx": "^0.11.0",
+	"robmorgan/phinx": "^0.10.6",
 	"sebastian/phpcpd": "^5.0.2",
 	"spatie/phpunit-snapshot-assertions": "^4.1.0",
 	"squizlabs/php_codesniffer": "^3.2.2",
