--- a/composer.json
+++ b/composer.json
@@ -34,10 +34,10 @@
 	}
   },
   "require": {
-	"amphp/http-client": "^4.2",
-	"aura/html": "^2.0",
-	"aura/router": "^3.0",
-	"aura/session": "^2.0",
+	"amphp/http-client": "^4.2.2",
+	"aura/html": "^2.5.0",
+	"aura/router": "^3.1.0",
+	"aura/session": "^2.1.0",
 	"aviat/banker": "^2.0.0",
 	"aviat/query": "^3.0.0",
 	"danielstjules/stringy": "^3.1.0",
@@ -46,31 +46,31 @@
 	"ext-json": "*",
 	"ext-gd": "*",
 	"ext-pdo": "*",
-	"laminas/laminas-diactoros": "^2.0.0",
-	"laminas/laminas-httphandlerrunner": "^1.0",
-	"maximebf/consolekit": "^1.0",
-	"monolog/monolog": "^2.0.1",
+	"laminas/laminas-diactoros": "^2.2.3",
+	"laminas/laminas-httphandlerrunner": "^1.1.0",
+	"maximebf/consolekit": "^1.0.3",
+	"monolog/monolog": "^2.0.2",
 	"php": ">=7.4",
-	"psr/container": "~1.0",
-	"psr/http-message": "~1.0",
-	"psr/log": "~1.0",
-	"yosymfony/toml": "^1.0"
+	"psr/container": "^1.0.0",
+	"psr/http-message": "^1.0.1",
+	"psr/log": "^1.1.3",
+	"yosymfony/toml": "^1.0.4"
   },
   "require-dev": {
 	"consolidation/robo": "^2.0.0",
 	"filp/whoops": "^2.1",
-	"pdepend/pdepend": "^2.2",
-	"phploc/phploc": "^6.0.2",
-	"phpmd/phpmd": "^2.8",
-	"phpstan/phpstan": "^0.12.0",
-	"phpunit/phpunit": "^9.1.1",
+	"pdepend/pdepend": "^2.",
+	"phploc/phploc": "^5.0.0",
+	"phpmd/phpmd": "^2.8.2",
+	"phpstan/phpstan": "^0.12.19",
+	"phpunit/phpunit": "^8.5.2",
 	"roave/security-advisories": "dev-master",
 	"robmorgan/phinx": "^0.10.6",
-	"sebastian/phpcpd": "^5.0.2",
+	"sebastian/phpcpd": "^4.1.0",
 	"spatie/phpunit-snapshot-assertions": "^4.1.0",
-	"squizlabs/php_codesniffer": "^3.2.2",
-	"symfony/var-dumper": "^5",
-	"theseer/phpdox": "*"
+	"squizlabs/php_codesniffer": "^3.5.4",
+	"symfony/var-dumper": "^5.0.7",
+	"theseer/phpdox": "^0.12.0"
   },
   "scripts": {
 	"build": "vendor/bin/robo build",
