Fix failing test

--- a/tests/AnimeClient/API/Kitsu/Transformer/__snapshots__/AnimeTransformerTest__testTransform__1.yml
+++ b/tests/AnimeClient/API/Kitsu/Transformer/__snapshots__/AnimeTransformerTest__testTransform__1.yml
@@ -29,5 +29,8 @@ titles:
     - 'Attack on Titan'
     - 'Shingeki no Kyojin'
     - 進撃の巨人
+titles_more:
+    2: 'Shingeki no Kyojin'
+    3: 進撃の巨人
 trailer_id: n4Nj6Y_SNYI
 url: 'https://kitsu.io/anime/attack-on-titan'
