Full character page pulled from GraphQL API, see #27

--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
 	"danielstjules/stringy": "^3.1.0",
 	"ext-dom": "*",
 	"ext-iconv": "*",
+	"ext-intl": "*",
 	"ext-json": "*",
 	"ext-gd": "*",
 	"ext-pdo": "*",
