--- a/composer.json
+++ b/composer.json
@@ -49,11 +49,11 @@
 	"ext-gd": "*",
 	"ext-pdo": "*",
 	"filp/whoops": "^2.1",
-	"laminas/laminas-diactoros": "^2.2.3",
+	"laminas/laminas-diactoros": "^2.5.0",
 	"laminas/laminas-httphandlerrunner": "^1.1.0",
 	"maximebf/consolekit": "^1.0.3",
 	"monolog/monolog": "^2.0.2",
-	"php": ">=7.4",
+	"php": "^7.4 || ~8.0.0",
 	"psr/container": "^1.0.0",
 	"psr/http-message": "^1.0.1",
 	"psr/log": "^1.1.3",
