--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   "config": {
 	"lock": false,
 	"platform": {
-	  "php": "7.4"
+	  "php": "8"
 	}
   },
   "require": {
@@ -53,7 +53,7 @@
 	"laminas/laminas-httphandlerrunner": "^1.1.0",
 	"maximebf/consolekit": "^1.0.3",
 	"monolog/monolog": "^2.0.2",
-	"php": "^7.4 || ~8.0.0",
+	"php": "^8.0.0",
 	"psr/container": "^1.0.0",
 	"psr/http-message": "^1.0.1",
 	"psr/log": "^1.1.3",
