--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,16 +3,14 @@ parameters:
 	checkMissingIterableValueType: false
 	inferPrivatePropertyTypeFromConstructor: true
 	level: 7
-	autoload_files:
-		- %rootDir%/../../../tests/mocks.php
 	paths:
 		- src
 		- ./console
 		- index.php
 	ignoreErrors:
-		- '#Access to an undefined property Aviat\\\Ion\\\Friend::\$[a-zA-Z0-9_]+#'
-		- '#Call to an undefined method Aviat\\\Ion\\\Friend::[a-zA-Z0-9_]+\(\)#'
+		- "#Offset 'fields' does not exist on array#"
 		- '#Call to an undefined method Aura\\\Html\\\HelperLocator::[a-zA-Z0-9_]+\(\)#'
-		- '#Property Amp\\Artax\\Internal\\RequestCycle::\$[a-zA-Z0-9_]+#'
+		- '#Call to an undefined method Query\\QueryBuilderInterface::[a-zA-Z0-9_]+\(\)#'
 	excludes_analyse:
 		- tests/mocks.php
+		- vendor
