Yet more PHPStan fixes

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,6 +8,7 @@ parameters:
 		- ./console
 		- index.php
 	ignoreErrors:
+		- '#Access to an undefined property Aviat\\Ion\\Friend#'
 		- "#Offset 'fields' does not exist on array#"
 		- '#Call to an undefined method Aura\\\Html\\\HelperLocator::[a-zA-Z0-9_]+\(\)#'
 		- '#Call to an undefined method Query\\QueryBuilderInterface::[a-zA-Z0-9_]+\(\)#'
