--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,6 @@
 	"danielstjules/stringy": "^3.1.0",
 	"ext-dom": "*",
 	"ext-iconv": "*",
-	"ext-intl": "*",
 	"ext-json": "*",
 	"ext-gd": "*",
 	"ext-pdo": "*",
@@ -53,11 +52,12 @@
 	"laminas/laminas-httphandlerrunner": "^1.1.0",
 	"maximebf/consolekit": "^1.0.3",
 	"monolog/monolog": "^2.0.2",
-	"php": "^8.0.0",
+	"php": ">= 8.0.0",
 	"psr/container": "^1.0.0",
 	"psr/http-message": "^1.0.1",
 	"psr/log": "^1.1.3",
 	"robmorgan/phinx": "^0.12.4",
+	"symfony/polyfill-intl-idn": "^1.0.0",
 	"symfony/var-dumper": "^5.0.7",
 	"yosymfony/toml": "^1.0.4"
   },
