--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
 	"aviat/query": "^3.0.0",
 	"danielstjules/stringy": "^3.1.0",
 	"ext-dom": "*",
-	"ext-iconv": "*",
+	"ext-intl": "*",
 	"ext-json": "*",
 	"ext-gd": "*",
 	"ext-pdo": "*",
@@ -57,7 +57,8 @@
 	"psr/http-message": "^1.0.1",
 	"psr/log": "^1.1.3",
 	"robmorgan/phinx": "^0.12.4",
-	"symfony/polyfill-intl-icu": "^1.0.0",
+	"symfony/polyfill-mbstring": "^1.0.0",
+	"symfony/polyfill-util": "^1.0.0",
 	"symfony/var-dumper": "^5.0.7",
 	"yosymfony/toml": "^1.0.4"
   },
