--- a/phpstan.neon
+++ b/phpstan.neon
@@ -13,10 +13,10 @@ parameters:
 		- '#Function imagepalletetotruecolor not found#'
 		- '#Call to an undefined method Aura\\\Html\\\HelperLocator::[a-zA-Z0-9_]+\(\)#'
 		- '#Call to an undefined method Query\\QueryBuilderInterface::[a-zA-Z0-9_]+\(\)#'
-		- '#Unable to resolve the template type TValue#'
 	excludes_analyse:
 		- tests/mocks.php
 		- vendor
 	# These are objects that basically can return anything
 	universalObjectCratesClasses:
 		- Aviat\Ion\Friend
+	tmpDir: tmp
