--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
   "autoload-dev": {
 	"psr-4": {
 	  "Aviat\\AnimeClient\\Tests\\": "tests/AnimeClient",
-	  "Aviat\\Ion\\Tests\\": "tests/Ion",
-	  "CodeIgniter\\": "build/CodeIgniter/"
+	  "Aviat\\Ion\\Tests\\": "tests/Ion"
 	}
   },
   "config": {
@@ -39,7 +38,7 @@
 	"aura/html": "^2.5.0",
 	"aura/router": "^3.1.0",
 	"aura/session": "^2.1.0",
-	"aviat/banker": "^3.1.1",
+	"aviat/banker": "^3.0.0 || ^4.0.0",
 	"aviat/query": "^3.0.0",
 	"danielstjules/stringy": "^3.1.0",
 	"ext-dom": "*",
@@ -48,13 +47,12 @@
 	"ext-gd": "*",
 	"ext-pdo": "*",
 	"laminas/laminas-diactoros": "^2.5.0",
-	"laminas/laminas-httphandlerrunner": "^1.1.0",
+	"laminas/laminas-httphandlerrunner": "^2.1.0",
 	"maximebf/consolekit": "^1.0.3",
 	"monolog/monolog": "^2.0.2",
 	"php": ">= 8.0.0",
-	"psr/container": "^1.0.0",
 	"psr/http-message": "^1.0.1",
-	"psr/log": "^1.1.3",
+	"psr/log": "*",
 	"robmorgan/phinx": "^0.12.4",
 	"symfony/polyfill-mbstring": "^1.0.0",
 	"symfony/polyfill-util": "^1.0.0",
@@ -62,21 +60,14 @@
 	"yosymfony/toml": "^1.0.4"
   },
   "require-dev": {
-	"pdepend/pdepend": "^2.",
-	"phploc/phploc": "^7.0.0",
-	"phpmd/phpmd": "^2.8.2",
-	"phpstan/phpstan": "^0.12.19",
+	"phpstan/phpstan": "^1.2.0",
 	"phpunit/phpunit": "^9.5.0",
 	"roave/security-advisories": "dev-master",
-	"sebastian/phpcpd": "^6.0.0",
-	"spatie/phpunit-snapshot-assertions": "^4.1.0",
-	"squizlabs/php_codesniffer": "^3.5.4"
+	"spatie/phpunit-snapshot-assertions": "^4.1.0"
   },
   "scripts": {
-	"build": "vendor/bin/robo build",
 	"build:css": "cd public && npm run build:css && cd ..",
 	"build:js": "cd public && npm run build:js && cd ..",
-	"clean": "vendor/bin/robo clean",
 	"coverage": "phpdbg -qrr -- vendor/bin/phpunit -c build",
 	"phpstan": "phpstan analyse -c phpstan.neon",
 	"watch:css": "cd public && npm run watch:css",
@@ -85,9 +76,7 @@
 	"test-update": "vendor/bin/phpunit -c build --no-coverage -d --update-snapshots"
   },
   "scripts-descriptions": {
-	"build": "Generate the api docs",
 	"build:css": "Generate browser css",
-	"clean": "Remove documentation generation files and folders",
 	"coverage": "Generate a test coverage report",
 	"phpstan": "Run PHP Static analysis",
 	"test": "Run the unit tests"
