Partially fix broken tests

--- a/tests/AnimeClient/API/Kitsu/Transformer/__snapshots__/AnimeListTransformerTest__testUntransform with data set 2__1.yml
+++ b/tests/AnimeClient/API/Kitsu/Transformer/__snapshots__/AnimeListTransformerTest__testUntransform with data set 2__1.yml
@@ -6,6 +6,7 @@ data:
     notes: ''
     private: true
     progress: 12
+    ratingTwenty: null
     reconsumeCount: 0
     reconsuming: true
     status: current
