Remove more redundant phpdoc properties

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
 	"aura/html": "^2.5.0",
 	"aura/router": "^3.1.0",
 	"aura/session": "^2.1.0",
-	"aviat/banker": "^3.0.0 || ^4.0.0",
+	"aviat/banker": "^3.0.0",
 	"aviat/query": "^3.0.0",
 	"danielstjules/stringy": "^3.1.0",
 	"ext-dom": "*",
@@ -53,7 +53,6 @@
 	"php": ">= 8.0.0",
 	"psr/http-message": "^1.0.1",
 	"psr/log": "*",
-	"robmorgan/phinx": "^0.12.4",
 	"symfony/polyfill-mbstring": "^1.0.0",
 	"symfony/polyfill-util": "^1.0.0",
 	"tracy/tracy": "^2.8.0",
