--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,7 @@
 	}
   },
   "config": {
-	"lock": false,
-	"platform": {
-	  "php": "8"
-	}
+	"lock": false
   },
   "require": {
 	"amphp/amp": "^2.5.0",
@@ -39,18 +36,18 @@
 	"aura/router": "^3.1.0",
 	"aura/session": "^2.1.0",
 	"aviat/banker": "^3.0.0",
-	"aviat/query": "^3.0.0",
-	"danielstjules/stringy": "^3.1.0",
+	"aviat/query": "^4.0.0",
 	"ext-dom": "*",
+	"ext-gd": "*",
 	"ext-intl": "*",
 	"ext-json": "*",
-	"ext-gd": "*",
+	"ext-mbstring": "*",
 	"ext-pdo": "*",
 	"laminas/laminas-diactoros": "^2.5.0",
 	"laminas/laminas-httphandlerrunner": "^2.1.0",
 	"maximebf/consolekit": "^1.0.3",
 	"monolog/monolog": "^2.0.2",
-	"php": ">= 8.0.0",
+	"php": ">= 8.1.0",
 	"psr/http-message": "^1.0.1",
 	"psr/log": "*",
 	"symfony/polyfill-mbstring": "^1.0.0",
