Update cache dependency

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
 	"aura/html": "^2.5.0",
 	"aura/router": "^3.1.0",
 	"aura/session": "^2.1.0",
-	"aviat/banker": "^3.0.0",
+	"aviat/banker": "^4.1.2",
 	"aviat/query": "^4.0.0",
 	"ext-dom": "*",
 	"ext-gd": "*",
@@ -46,10 +46,9 @@
 	"laminas/laminas-diactoros": "^2.5.0",
 	"laminas/laminas-httphandlerrunner": "^2.1.0",
 	"maximebf/consolekit": "^1.0.3",
-	"monolog/monolog": "^2.0.2",
+	"monolog/monolog": "^3.0.0",
 	"php": ">= 8.1.0",
 	"psr/http-message": "^1.0.1",
-	"psr/log": "*",
 	"symfony/polyfill-mbstring": "^1.0.0",
 	"symfony/polyfill-util": "^1.0.0",
 	"tracy/tracy": "^2.8.0",
@@ -64,7 +63,7 @@
   "scripts": {
 	"build:css": "cd public && npm run build:css && cd ..",
 	"build:js": "cd public && npm run build:js && cd ..",
-	"coverage": "phpdbg -qrr -- vendor/bin/phpunit -c build",
+	"coverage": "php -dpcov.enabled=1 -dpcov.directory=. -dpcov.exclude=\"~vendor~\" ./vendor/bin/phpunit -c build",
 	"phpstan": "phpstan analyse -c phpstan.neon",
 	"watch:css": "cd public && npm run watch:css",
 	"watch:js": "cd public && npm run watch:js",
