--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,11 +9,12 @@ parameters:
 		- ./console
 		- index.php
 	ignoreErrors:
-		- "#Offset 'fields' does not exist on array#"
-		- '#Function imagepalletetotruecolor not found#'
+		- '#Unable to resolve the template type T#'
+		- '#imagepalletetotruecolor not found#'
 		- '#Call to an undefined method Aura\\\Html\\\HelperLocator::[a-zA-Z0-9_]+\(\)#'
 		- '#Call to an undefined method Query\\QueryBuilderInterface::[a-zA-Z0-9_]+\(\)#'
-	excludes_analyse:
+	excludePaths:
+		- src/Ion/Type/Stringy.php
 		- tests/mocks.php
 		- vendor
 	# These are objects that basically can return anything
