--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   "require": {
 	"amphp/http-client": "^4.5.0",
 	"aura/html": "^2.5.0",
-	"aura/router": "^3.1.0",
+	"aura/router": "3.2.0",
 	"aura/session": "^2.1.0",
 	"aviat/banker": "^4.1.2",
 	"aviat/query": "^4.1.0",
