--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
 	"lock": false
   },
   "require": {
-	"amphp/http-client": "^4.5.0",
+	"amphp/http-client": "^v5.0.0",
 	"aura/html": "^2.5.0",
 	"aura/router": "3.2.0",
 	"aura/session": "^2.1.0",
@@ -47,7 +47,7 @@
 	"maximebf/consolekit": "^1.0.3",
 	"monolog/monolog": "^3.0.0",
 	"php": ">= 8.2.0",
-	"psr/http-message": "^1.0.1",
+	"psr/http-message": "^1.0.1 || ^2.0.0",
 	"symfony/polyfill-mbstring": "^1.0.0",
 	"symfony/polyfill-util": "^1.0.0",
 	"tracy/tracy": "^2.8.0",
