Fix other old Kitsu url references

--- a/src/AnimeClient/API/Kitsu/graphql.config.yml
+++ b/src/AnimeClient/API/Kitsu/graphql.config.yml
@@ -2,7 +2,7 @@ schema: schema.graphql
 extensions:
   endpoints:
     Kitsu:
-      url: https://kitsu.io/api/graphql
+      url: https://kitsu.app/api/graphql
       headers:
         user-agent: JS GraphQL
       introspect: true
