--- a/composer.json
+++ b/composer.json
@@ -48,10 +48,11 @@
 	"monolog/monolog": "^3.0.0",
 	"php": ">= 8.2.0",
 	"psr/http-message": "^1.0.1 || ^2.0.0",
-	"symfony/polyfill-mbstring": "^1.0.0",
-	"symfony/polyfill-util": "^1.0.0",
 	"tracy/tracy": "^2.8.0",
 	"yosymfony/toml": "^1.0.4"
+  },
+  "replace": {
+  	"symfony/polyfill-mbstring": "*"
   },
   "require-dev": {
 	"phpstan/phpstan": "^1.2.0",
